--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </service>
 
         <service
-            android:name=".NotificationReceiver"
+            android:name=".FloatViewManager"
             android:enabled="true"
             android:exported="false" >
         </service>
